# smart_walking_stick

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  battery.md  current_design.md  functions.cmake  main_page.md  phyhardware.md  pr.md  pull_request_template.md  requirements.txt  system_architecture.md  user_stories.md  website.md
.github/ISSUE_TEMPLATE/: feature_request.md
Documentation/: README.md  SystemArchitecture.md  system_architecture.md
docs/: BasePublisher_8hpp.html  BasePublisher_8hpp__dep__incl.map  BasePublisher_8hpp__dep__incl.md5  BasePublisher_8hpp__incl.map  BasePublisher_8hpp__incl.md5  BasePublisher_8hpp_source.html  BaseSubscriber_8hpp.html  BaseSubscriber_8hpp__dep__incl.map  BaseSubscriber_8hpp__dep__incl.md5  BaseSubscriber_8hpp__incl.map  BaseSubscriber_8hpp__incl.md5  BaseSubscriber_8hpp_source.html  CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  CombinedSystem_8dir_2src_2application_2ToFDataPublisher_8cpp_8o_8d.html  CombinedSystem_8dir_2src_2drivers_2sensors_2sensors_8cpp_8o_8d.html  CombinedSystem_8dir_2src_2drivers_2sensors_2tof__sensor_8cpp_8o_8d.html  CombinedSystem_8dir_2src_2drivers_2vl53l0x-linux_2I2Cdev_8cpp_8o_8d.html  CombinedSystem_8dir_2src_2drivers_2vl53l0x-linux_2VL53L0X_8cpp_8o_8d.html  DDSCommunicator_8cpp.html  DDSCommunicator_8cpp__incl.map  DDSCommunicator_8cpp__incl.md5  DDSCommunicator_8hpp.html  DDSCommunicator_8hpp__dep__incl.map  DDSCommunicator_8hpp__dep__incl.md5  DDSCommunicator_8hpp__incl.map  DDSCommunicator_8hpp__incl.md5  DDSCommunicator_8hpp_source.html  I2Cdev_8cpp.html  I2Cdev_8cpp__incl.map  I2Cdev_8cpp__incl.md5  I2Cdev_8hpp.html  I2Cdev_8hpp.js  I2Cdev_8hpp__dep__incl.map  I2Cdev_8hpp__dep__incl.md5  I2Cdev_8hpp__incl.map  I2Cdev_8hpp__incl.md5  I2Cdev_8hpp_source.html  MockMotor_8cpp_8o_8d.html  MotorCommandsPubSubTypes_8cxx.html  (+535 more)
docs/html/: graph_legend.html  md_Documentation_user_stories.html  navtreeindex0.js  pages.html
docs/html/search/: files_1.js
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  (+72 more)
drivers/: CMakeLists.txt
drivers/include/: sensors.hpp  tof_sensor.hpp
drivers/src/: main.cpp  sensors.cpp  tof_sensor.cpp
html/: dir_00b6490d20453993a6c88e5258b67efe.html  index.html  md_Documentation_media_hardware.html  navtreedata.js
html/search/: files_2.js  files_3.js  pages_1.js  pages_3.js  pages_4.js
include/application/: Battery.hpp  BatteryMonitor.hpp  DDSCommunicator.hpp  MockMotor.hpp  MotorMove.hpp  ObstacleDetection.hpp  ToFDataPublisher.hpp  ToFDataSubscriber.hpp  ToFSensor.hpp  tof_sensor.hpp
include/drivers/: callback_interface.hpp  rpi_pwm.h  sensors.hpp  tof_sensor.hpp
include/fastdds/: BasePublisher.hpp  BaseSubscriber.hpp  HelloWorldPublisher.hpp  HelloWorldSubscriber.hpp  PubListener.hpp  SubListener.hpp  ToFDataPublisher.hpp
src/: BatteryTest.cpp  main.cpp  main_combined.cpp  main_mot_pub.cpp  main_pub.cpp  main_sub.cpp  main_tof_sub.cpp  tester_main.cpp
src/ToF_GUI/: CMakeCache.txt  Makefile  MotorCommands.py  Reader.py  ReaderListenerBattery.py  ReaderListenerMotor.py  ReaderListenerToF.py  ToFData.hpp  ToFData.i  ToFData.idl  ToFData.py  ToFDataCdrAux.hpp  ToFDataTypeObjectSupport.hpp  ToFSubDisplay.py  ToFSubscriber.py  ToFTestPublisher.py  WebpageSubGUI.py  cmake_install.cmake
src/ToF_GUI/templates/: index.html
src/ToF_GUI_Pub/: CMakeCache.txt  CMakeLists.txt  Makefile  TestPublisher.py  ToFData.hpp  ToFData.i  ToFData.idl  ToFData.py  ToFDataCdrAux.hpp  ToFDataCdrAux.ipp  ToFDataPubSubTypes.i  ToFDataTypeObjectSupport.cxx  UserInputSub.py  Webpage.py  cmake_install.cmake
src/ToF_GUI_Pub/templates/: index.html
src/application/: Battery.cpp  BatteryMonitor.cpp  DDSCommunicator.cpp  MockMotor.cpp  MotorMove.cpp  ObstacleDetection.cpp  ToFDataPublisher.cpp  ToFDataSubscriber.cpp  ToFSensor.cpp
src/drivers/INA219/: INA219.cpp  INA219.hpp
src/drivers/sensors/: sensors.cpp  tof_sensor.cpp
src/drivers/vl53l0x-linux/: VL53L0X.cpp
src/fastdds/: BasePublisher.cpp  ToFDataPublisher.cpp
src/my_venv/: pyvenv.cfg
src/src/fastdds/: CTestCustom.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile
src/src/fastdds/cmake/config/: fastdds-config.cmake
src/src/fastdds/include/fastdds/: config.hpp
src/src/fastdds/src/cpp/: Makefile  libfastdds.so.3.1
src/src/fastdds/src/cpp/fastdds/log/: Makefile
src/src/fastdds/src/cpp/fastdds/xtypes/: Makefile
src/src/fastdds/test/: CTestTestfile.cmake  Makefile
src/src/fastdds/tools/: CTestTestfile.cmake  Makefile
src/src/fastdds/tools/fastdds/: CTestTestfile.cmake  Makefile
src/src/fastdds/tools/fds/: CTestTestfile.cmake  Makefile  fast-discovery-server-1.0.1
src/tests/: DDSCommunicatorTest.cpp  MotorMoveTest.cpp  ToFSensorTest.cpp
src/topics/: Battery.idl  CMakeLists.txt  MotorCommands.cxx  MotorCommands.h  MotorCommands.hpp  MotorCommands.i  MotorCommands.idl  MotorCommandsCdrAux.hpp  MotorCommandsCdrAux.ipp  MotorCommandsPubSubTypes.cxx  MotorCommandsPubSubTypes.h  MotorCommandsPubSubTypes.hpp  MotorCommandsPubSubTypes.i  MotorCommandsTypeObjectSupport.cxx  MotorCommandsTypeObjectSupport.hpp  ToFData.cxx  ToFData.h  ToFData.idl  ToFDataCdrAux.ipp  ToFDataPubSubTypes.cxx  ToFDataPubSubTypes.h  ToFDataPubSubTypes.hpp  ToFDataTypeObjectSupport.cxx
